--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="com.red_folder.phonegap.plugin.backgroundservice"
+        id="com.thalesvalentim.phonegap.plugin.whereAmI"
         version="2.0.0">
 
     <name>Background Service Plugin - Core logic</name>
@@ -24,7 +24,7 @@
 
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="BackgroundServicePlugin">
-                <param name="android-package" value="com.red_folder.phonegap.plugin.backgroundservice.BackgroundServicePlugin"/>
+                <param name="android-package" value="com.thalesvalentim.phonegap.plugin.whereAmI.BackgroundServicePlugin"/>
             </feature>
     
         </config-file>
@@ -35,7 +35,7 @@
         
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
   
-            <receiver android:name="com.red_folder.phonegap.plugin.backgroundservice.BootReceiver">
+            <receiver android:name="com.thalesvalentim.phonegap.plugin.whereAmI.BootReceiver">
                 <intent-filter>     
                     <action android:name="android.intent.action.BOOT_COMPLETED"></action>   
                 </intent-filter> 
@@ -44,14 +44,14 @@
         </config-file>
         
 		
-        <source-file src="src/android/BackgroundService.java" target-dir="src/com/red_folder/phonegap/plugin/backgroundservice" />
-        <source-file src="src/android/BackgroundServicePlugin.java" target-dir="src/com/red_folder/phonegap/plugin/backgroundservice" />
-        <source-file src="src/android/BackgroundServicePluginLogic.java" target-dir="src/com/red_folder/phonegap/plugin/backgroundservice" />
-        <source-file src="src/android/BootReceiver.java" target-dir="src/com/red_folder/phonegap/plugin/backgroundservice" />
-        <source-file src="src/android/PropertyHelper.java" target-dir="src/com/red_folder/phonegap/plugin/backgroundservice" />
+        <source-file src="src/android/BackgroundService.java" target-dir="src/com/thalesvalentim/phonegap/plugin/whereAmI" />
+        <source-file src="src/android/BackgroundServicePlugin.java" target-dir="src/com/thalesvalentim/phonegap/plugin/whereAmI" />
+        <source-file src="src/android/BackgroundServicePluginLogic.java" target-dir="src/com/thalesvalentim/phonegap/plugin/whereAmI" />
+        <source-file src="src/android/BootReceiver.java" target-dir="src/com/thalesvalentim/phonegap/plugin/whereAmI" />
+        <source-file src="src/android/PropertyHelper.java" target-dir="src/com/thalesvalentim/phonegap/plugin/whereAmI" />
 		
-        <source-file src="aidl/android/BackgroundServiceApi.aidl" target-dir="src/com/red_folder/phonegap/plugin/backgroundservice" />
-        <source-file src="aidl/android/BackgroundServiceListener.aidl" target-dir="src/com/red_folder/phonegap/plugin/backgroundservice" />
+        <source-file src="aidl/android/BackgroundServiceApi.aidl" target-dir="src/com/thalesvalentim/phonegap/plugin/whereAmI" />
+        <source-file src="aidl/android/BackgroundServiceListener.aidl" target-dir="src/com/thalesvalentim/phonegap/plugin/whereAmI" />
 		
     </platform>
 </plugin>
